# mdot

./: .gitignore  CMakeLists.txt  README.md  default.nix  derivation.nix  shell.nix
src/golden/include/: gold.hpp
src/mdot/: CMakeLists.txt
src/mdot/cli/: climdot.cpp  cliprintoperator.cpp  create_maximal_entangled_state.cpp
src/mdot/include/: babel_type.hpp  general.hpp  hamiltonian_dense.hpp  indexdw.hpp  mat.hpp  operators.hpp  operators_static.hpp  typedef.hpp
src/mdot/include/routine/: eig_davidson.hpp  eig_jacobi.hpp  eig_jacobi_davidson.hpp  eig_lanczos.hpp  indices.hpp  interface.hpp  minimize.hpp  mul_routine.hpp  svd_routine.hpp
src/mdot/utils/: qnum.hpp  yofi.hpp
src/utils/: random_matrix.hpp
tests/benchmark/: CMakeLists.txt  bench_bloc_norm.cpp  bench_matrix_size.cpp
tests/sandbox/: sandbox.cpp
tests/unit/: CMakeLists.txt  test_babel_type.cpp  test_blas_add.cpp  test_blas_mul_zgemm.cpp  test_blas_mul_zhemm.cpp  test_blocs_static.cpp  test_dgemm_simple.cpp  test_golden.cpp  test_ind_dw.cpp  test_indexdw.cpp  test_lapack_eig_zheev.cpp  test_lapack_svd_dgesvd.cpp  test_lapack_svd_zgesdd.cpp  test_lapack_svd_zgesvd.cpp  test_operators.cpp  test_operators_static.cpp  test_qnum.cpp  test_routine_eig_jacobi.cpp  test_routine_eig_lanczos.cpp  test_routine_indices.cpp  test_routine_interface.cpp  test_routine_mul_routine.cpp  test_routine_svd_routine.cpp  test_simple_blas_add.cpp  test_simple_blas_dnrm.cpp  test_simple_blas_mul_dgemm.cpp  test_simple_blas_mul_dsymm.cpp  test_simple_blas_mul_zgemm.cpp  test_simple_blas_mul_zhemm.cpp  test_simple_dgemm.cpp  test_simple_dsymm.cpp  test_simple_lapack_eig_zheev.cpp  test_simple_lapack_svd_dgesdd.cpp  test_simple_lapack_svd_dgesvd.cpp  test_simple_lapack_svd_zgesvd.cpp  test_simple_svd.cpp  test_simple_zgemm.cpp  test_simple_zheev.cpp  test_simple_zhemm.cpp  test_utils.cpp  (+2 more)
